Добавлены подскаки в подменю мультисплит

--- a/index.html
+++ b/index.html
@@ -2896,15 +2896,15 @@
             <!--модальное окно мультисплит начало -->
             <div class="multi_block podmenu" id="multi">
                 <div class="multi_block_box multi_block_roof">
-                    <a href="javascript:void(0)" class="multi_block_box_zag">кассетные</a>
+                    <a href="javascript:void(0)" class="multi_block_box_zag" title="Техника с внутренним блоком кассетного типа (встраивается в подвесной потолок)">кассетные</a>
                     <div class="multi_block_box_link_power">
-                        <a href="javascript:void(0)">Кассетные 24</a>
-                        <a href="javascript:void(0)">Кассетные 36</a>
-                        <a href="javascript:void(0)">Кассетные 48</a>
-                        <a href="javascript:void(0)">Кассетные 60</a>
+                        <a href="javascript:void(0)" title="Группа кассетных кондиционеров, до 110 кв.м">Кассетные 24</a>
+                        <a href="javascript:void(0)"  title="Группа кассетных кондиционеров, до 75 кв.м">Кассетные 36</a>
+                        <a href="javascript:void(0)" title="Группа кассетных кондиционеров, до 140 кв.м">Кассетные 48</a>
+                        <a href="javascript:void(0)" title="Группа кассетных кондиционеров, до 180 кв.м">Кассетные 60</a>
                     </div>
-                    <div class="multi_block_kaseta_washing">
-                        <img src="img/washing.png" alt="" title="">
+                    <div class="multi_block_kaseta_washing" title="Приборы для очистки и увлажнения воздуха">
+                        <img src="img/washing.png" alt="" >
                         <a href="javascript:void(0)">
                             <span>Мойки воздуха,</span>
                             <span>увлажнители,</span>
@@ -2913,26 +2913,26 @@
                     </div>
                 </div>
                 <div class="multi_block_box multi_block_kaseta">
-                    <a href="javascript:void(0)" class="multi_block_box_zag">Настенно потолочные</a>
+                    <a href="javascript:void(0)" class="multi_block_box_zag" title="Техника с внутренним блоком настенно-потолочного типа ">Настенно потолочные</a>
                     <div class="multi_block_box_link_power">
-                        <a href="javascript:void(0)">Потолочные 24</a>
-                        <a href="javascript:void(0)">Потолочные 36</a>
-                        <a href="javascript:void(0)">Потолочные 48</a>
-                        <a href="javascript:void(0)">Потолочные 60</a>
+                        <a href="javascript:void(0)" title="Группа потолочных кондиционеров, до 110 кв.м">Потолочные 24</a>
+                        <a href="javascript:void(0)" title="Группа потолочных кондиционеров, до 75 кв.м">Потолочные 36</a>
+                        <a href="javascript:void(0)" title="Группа потолочных кондиционеров, до 140 кв.м">Потолочные 48</a>
+                        <a href="javascript:void(0)" title="Группа потолочных кондиционеров, до 140 кв.м">Потолочные 60</a>
                     </div>
                     <div class="multi_block_box_link_kategories">
-                        <a href="javascript:void(0)">Канальные</a>
-                        <a href="javascript:void(0)">VRF системы</a>
-                        <a href="javascript:void(0)">Колонные</a>
-                        <a href="javascript:void(0)">Вентиляция</a>
+                        <a href="javascript:void(0)" title="Канальные кондиционеры (скрытый монтаж между черновым и подвесным потолком)">Канальные</a>
+                        <a href="javascript:void(0)"  title="Мультизональные, для общественных помещений - до 30 внутренних блоков ">VRF системы</a>
+                        <a href="javascript:void(0)" title="Колонные кондиционеры (как шкаф, устанавливается на пол)">Колонные</a>
+                        <a href="javascript:void(0)" title="Приточно вытяжные системы вентиляции">Вентиляция</a>
                     </div>
                 </div>
                 <div class="multi_block_box multi_block_multi">
-                    <a href="javascript:void(0)" class="multi_block_box_zag">мульти сплит системы</a>
+                    <a href="javascript:void(0)" class="multi_block_box_zag" title="Сплит для 2-х комнат, 3-х комнат">мульти сплит системы</a>
                     <div class="multi_block_box_link_power">
 
                     </div>
-                    <div class="multi_block_multi_kalcul">
+                    <div class="multi_block_multi_kalcul" title="Калькулятор мультисплит">
                         <img src="img/kalcul2.png" alt="" title="">
                         <a href="javascript:void(0)">
                             <span>On-Line программа</span>
