Добавлены подсказки в подменю "Установка/сервис"

--- a/index.html
+++ b/index.html
@@ -2949,7 +2949,7 @@
                     <div class="services_block_link_box_block services_block_link_box_price">
                         <div class="services_block_link_box_block_img_line"><img src="img/price_list.png" alt=""
                                                                                  title=""></div>
-                        <a href="javascript:void(0)">
+                        <a href="javascript:void(0)" title="Стоимость различных работ, необходимых при монтаже климатической техники">
                             <span><b>Полный прайс лист</b></span>
                             <span><i>(прейскурант цен)</i> <b>на работы</b></span>
                             <span><b>по установке сплит и</b></span>
@@ -2961,7 +2961,7 @@
                     <div class="services_block_link_box_block services_block_link_box_spec">
                         <div class="services_block_link_box_block_img_line"><img src="img/spec.png" alt="" title="">
                         </div>
-                        <a href="javascript:void(0)">
+                        <a href="javascript:void(0)" title="Вызвать замерщика сплит - консультация, составление сметы ">
                             <b>Вызов специалиста</b> 400 руб.
                         </a>
                     </div>
@@ -2979,27 +2979,27 @@
                 </div>
                 <div class="services_block_nav">
                     <ul>
-                        <li><a href="#image1">
+                        <li><a href="#image1" title="Цены на установку сплит в Ростове">
                             <b>Установка</b> <span>(монтаж)</span> <b>бытовой настенной сплит системы</b>
                         </a>
                             <p class="price"><span>от</span> 1800 <i>руб.</i></p>
                         </li>
-                        <li><a href="#image2">
+                        <li><a href="#image2" title="Цены на монтаж в 2 этапа (сначала грязные работы, по окончании ремонта - монтаж внутреннего блока сплит)">
                             <b>Установка в 2 этапа</b> <span>(закладка трубок в стены)</span>
                         </a>
                             <p class="price"><span>от</span> 1800 <i>руб.</i></p>
                         </li>
-                        <li><a href="#image3">
+                        <li><a href="#image3" title="Снять кондиционер в Ростове ">
                             <b>Демонтаж сплит системы</b>
                         </a>
                             <p class="price"><span>от</span> 800 <i>руб.</i></p>
                         </li>
-                        <li><a href="#image4">
+                        <li><a href="#image4" title="Регламентное обслуживание кондиционеров">
                             <b>Техническое обслуживание</b> <span>(чистка)</span> <b>сплит системы</b>
                         </a>
                             <p class="price"><span>от</span> 800 <i>руб.</i></p>
                         </li>
-                        <li><a href="#image5">
+                        <li><a href="#image5" title="Устранение неполадок в работе сплит систем - цены, рекомендации DBVNT{, советы по самостоятельному ремонту">
                             <b>Ремонт, диагностика кондиционеров, сплит систем</b>
                         </a>
                             <p class="price"><span>от</span> 400 <i>руб.</i></p>
