Добавлены подсказки в подменю "Помощ"

--- a/index.html
+++ b/index.html
@@ -3018,7 +3018,7 @@
                     <div class="question_block_slider_wrap_slider_block">
                         <div class="slide slide1">
                             <div class="slide_text">
-                                <a href="javascript:void(0)">
+                                <a href="javascript:void(0)" title="Сколько времени, до поломки, проработает кондиционер (сплит система) без обслуживания? ">
                                     <span>Cколько времени</span>
                                     <span>проработает</span>
                                     <span>кондиционер без</span>
@@ -3028,7 +3028,7 @@
                         </div>
                         <div class="slide slide2">
                             <div class="slide_text">
-                                <a href="javascript:void(0)">
+                                <a href="javascript:void(0)" title="Как быстро, после заказа, Вимтех сделает монтаж сплит системы в Ростове?">
                                     <span>Как быстро будет сделан </span>
                                     монтаж сплит системы?
                                 </a>
@@ -3036,7 +3036,7 @@
                         </div>
                         <div class="slide slide3">
                             <div class="slide_text">
-                                <a href="javascript:void(0)">
+                                <a href="javascript:void(0)" title="Ошибки при монтаже сплит системы. Монтаж кондиционера дома – характерные ошибки мастеров.">
                                     <span>Ошибки при монтаже</span>
                                     <span>сплит системы. Монтаж</span>
                                     <span>кондиционера дома –</span>
@@ -3045,7 +3045,7 @@
                             </div>
                         </div>
                         <div class="slide slide4">
-                            <div class="slide_text">
+                            <div class="slide_text" title="Чем китайский Фуджицу лучше китайского Хайер - всё в Китае делается и качество одинаковое?">
                                 <a href="javascript:void(0)">
                                     <span>Почему кондиционер</span>
                                     <span>Fujitsu произведённый на территории КНР, лучше китайского Haier - всё в Китае делается и качество одинаковое?</span>
@@ -3054,7 +3054,7 @@
                         </div>
                         <div class="slide slide5">
                             <div class="slide_text">
-                                <a href="javascript:void(0)">
+                                <a href="javascript:void(0)" title="Как часто нужно менять фильтры в сплит системе?">
                                     <span>Как часто нужно менять </span>
                                     фильтры?
                                 </a>
@@ -3062,7 +3062,7 @@
                         </div>
                         <div class="slide slide6">
                             <div class="slide_text">
-                                <a href="javascript:void(0)">
+                                <a href="javascript:void(0)" title="Ионизатор - генератор анионов, отрицательных электронов. Лучше приобрести отдельно или в комплекте с кондиционером? Сколько ионизатор мне здоровья прибавит?">
                                     <span>Для чего нужен</span>
                                     ионизатор? Что это такое?
                                 </a>
@@ -3070,7 +3070,7 @@
                         </div>
                         <div class="slide slide7">
                             <div class="slide_text">
-                                <a href="javascript:void(0)">
+                                <a href="javascript:void(0)" title="В чём отличие сплит системы Мицубиси Хеви от Мицубиси Электрик?">
                                     <span>В чём отличие</span> <span>сплит системы Мицубиси Хеви</span> от Мицубиси
                                     Электрик
                                 </a>
@@ -3078,7 +3078,7 @@
                         </div>
                         <div class="slide slide8">
                             <div class="slide_text">
-                                <a href="javascript:void(0)">
+                                <a href="javascript:void(0)" title="Правда про инверторные сплит системы.">
                                     <span>Правда про инверторные</span>
                                     сплит системы
                                 </a>
