Поправлен кальккулятор добавлен адаптив в заголовок h2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="miniature_block modal">
             <a href="javascript:void(0)" class="close_mini"></a>
             <a href="#foto" class="img">
-                <img id="" src="img/foto.jpg" alt="Витрина" title="Витрина">
+                <img  src="img/foto.jpg" alt="Витрина" title="Витрина">
             </a>
             <a href="#map_big" class="img">
                 <img src="img/map.jpg" alt="map" title="map">
@@ -2254,6 +2254,7 @@
                                         <input type="text" value="1-2" id="T"><a href="javascript:void(0)"
                                                                                  class="arow"></a>
                                         <ul class="option">
+                                            <li><a href="javascript:void(0)"><i>0</i></a></li>
                                             <li><a href="javascript:void(0)"><i>1-2</i></a></li>
                                             <li><a href="javascript:void(0)"><i>2-3</i></a></li>
                                             <li><a href="javascript:void(0)"><i>3-4</i></a></li>
@@ -2898,8 +2899,8 @@
                 <div class="multi_block_box multi_block_roof">
                     <a href="javascript:void(0)" class="multi_block_box_zag" title="Техника с внутренним блоком кассетного типа (встраивается в подвесной потолок)">кассетные</a>
                     <div class="multi_block_box_link_power">
-                        <a href="javascript:void(0)" title="Группа кассетных кондиционеров, до 110 кв.м">Кассетные 24</a>
-                        <a href="javascript:void(0)"  title="Группа кассетных кондиционеров, до 75 кв.м">Кассетные 36</a>
+                        <a href="javascript:void(0)" title="Группа кассетных кондиционеров, до 75 кв.м">Кассетные 24</a>
+                        <a href="javascript:void(0)"  title="Группа кассетных кондиционеров, до 110 кв.м">Кассетные 36</a>
                         <a href="javascript:void(0)" title="Группа кассетных кондиционеров, до 140 кв.м">Кассетные 48</a>
                         <a href="javascript:void(0)" title="Группа кассетных кондиционеров, до 180 кв.м">Кассетные 60</a>
                     </div>
@@ -2915,8 +2916,8 @@
                 <div class="multi_block_box multi_block_kaseta">
                     <a href="javascript:void(0)" class="multi_block_box_zag" title="Техника с внутренним блоком настенно-потолочного типа ">Настенно потолочные</a>
                     <div class="multi_block_box_link_power">
-                        <a href="javascript:void(0)" title="Группа потолочных кондиционеров, до 110 кв.м">Потолочные 24</a>
-                        <a href="javascript:void(0)" title="Группа потолочных кондиционеров, до 75 кв.м">Потолочные 36</a>
+                        <a href="javascript:void(0)" title="Группа потолочных кондиционеров, до 75 кв.м">Потолочные 24</a>
+                        <a href="javascript:void(0)" title="Группа потолочных кондиционеров, до 110 кв.м">Потолочные 36</a>
                         <a href="javascript:void(0)" title="Группа потолочных кондиционеров, до 140 кв.м">Потолочные 48</a>
                         <a href="javascript:void(0)" title="Группа потолочных кондиционеров, до 140 кв.м">Потолочные 60</a>
                     </div>
