Добавлено в  шаблон письма тема и кому

--- a/index.html
+++ b/index.html
@@ -3205,7 +3205,7 @@
                     </li>
                 </ul>
                 <div class="header_kontakt_line">
-                    <a href="mailto:zakaz@2211687.ru" class="meil"><p>Пишите:</p><i
+                    <a href="mailto:zakaz@2211687.ru Менеджеру_ВИМТЕХ?subject=рассмотреть срочно(шифр ОВ-особой важности)" class="meil"><p>Пишите:</p><i
                             class="icon-mail_header"></i> zakaz@2211687.ru</a>
                     <a href="javascript:void(0)" class="ring">
                         <p>Звоните<span>:</span></p>
