Добавллен вотсап в подвал

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="modal_fon">
         <div class="foto_block schem_big_block modal" id="foto">
             <a href="javascript:void(0)" class="close_foto"><i></i></a>
-            <img src="img/foto.jpg" alt="Витрина ВИМТЕХ" title="Витрина ВИМТЕХ">
+            <img src="img/schema/v" alt="Витрина ВИМТЕХ" title="Витрина ВИМТЕХ">
         </div>
         <!--блок с миниатюрами схем-->
         <div class="miniature_block modal">
@@ -5361,7 +5361,15 @@
                         <div class="footer_info__section_tel_block">
                             <div class="footer_info__section_tel_block_sity"><p id="_telephone3" itemprop="telephone">
                                 <span>8 (863)</span> 221-16-87</p>
-                                <p id="_telephone4" itemprop="telephone"><span>8 (863)</span> 256-33-87</p></div>
+                                <p id="_telephone4" itemprop="telephone"><span>8 (863)</span> 256-33-87</p>
+                            <div class="whatsapp">
+                                <div class="zag">
+                                    <i></i><p>Whotsapp<span>(Вотсап)</span></p>
+                                    <a href="tel:7(918)5605556"><span>+7(918)</span>560 55 56</a>
+                                </div>
+
+                            </div>
+                            </div>
                             <div class="footer_info__section_tel_block_mobile"><p id="_telephone5" itemprop="telephone">
                                 <i class="tel1"></i><span>+7 (918)</span> 501 08 54</p>
                                 <p id="_telephone6" itemprop="telephone"><i class="tel2"></i><span>+7 (903)</span> 406
