--- a/index.html
+++ b/index.html
@@ -2652,7 +2652,7 @@
                                 <a href="javascript:void(0)"><img src="img/prestig3.png"
                                                                   alt="Ассортимент, цены кондиционеров (сплит) производителя darkin"
                                                                   title="Ассортимент, цены кондиционеров (сплит) производителя darkin"></a>
-                                <a href="javascript:void(0)"><img src="img/prestig4.png"
+                                <a href="javascript:void(0)" class="big"><img src="img/prestig4.png"
                                                                   alt="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"
                                                                   title="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"></a>
 
@@ -3151,6 +3151,9 @@
                     <div class="time">
                         <div class="timer" id="timer_header">
                             <h3 class="zag" id="zag_header">До конца рабочего дня осталось:</h3>
+                            <p class="timer_name_line">
+                                <span>Час</span><span>Минут</span><span>Сек.</span>
+                            </p>
                             <div class="timer_line">
                                 <div class="timer_block" id="timer_hover" data-timer="10">
 
@@ -5179,6 +5182,9 @@
             </div>
             <div class="mini_footer_timer_wrap">
                 <h3 class="mini_footer_timer_wrap_zag">До конца рабочего дня осталось:</h3>
+                <p class="mini_footer_timer_wrap_name_line">
+                    <span>Час</span><span>Минут</span><span>Сек.</span>
+                </p>
                 <div class="timer_line">
                     <div class="timer_line_block" id="mini_timer">
 
@@ -5367,7 +5373,10 @@
                         <p class="footer_info__section_time_ps">(без перерыва)</p>
                         <div class="footer_info__section_timer_wrap"><p class="footer_info__section_timer_wrap_zag">До
                             конца рабочего дня осталось:</p>
-                            <div class="footer_info__section_timer_wrap_block">
+                            <p class="footer_info__section_timer_wrap_name_line">
+                                <span>Час</span><span>Минут</span><span>Сек.</span>
+                            </p>
+                          <div class="footer_info__section_timer_wrap_block">
                                 <div class="footer_info__section_timer_wrap_block_box" id="DateCountdown"
                                      data-timer="10"></div>
                             </div>
