зменён заголовок h2 в ценах. удалён блок с банером

--- a/index.html
+++ b/index.html
@@ -3703,7 +3703,7 @@
                         </div>
                     </aside>
                     <div class="section_product_wrap_price_wrap_section_block">
-                        <h2>Цена на инверторные кондиционеры</h2>
+                        <h2>Цены на сплит в Ростовской области</h2>
                         <div class="section_product_wrap_price_wrap_section_block_block_line">
                             <a href="javascript:void(0)" class="bg_1 block">
                                 <div class="hover"></div>
@@ -3801,8 +3801,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="section_product_wrap_price_wrap_hype"><img src="img/hype.gif" alt="hype" title="hype">
-                    </div>
+
                     <div class="section_product_wrap_price_wrap_section_block section_product_wrap_rig">
                         <h2>Стоимость другого климатического оборудования</h2>
                         <div class="section_product_wrap_price_wrap_section_block_block_line">
