ссылко на адресах заводов не должно быть - ибо есть кнопка "Читать далее"

--- a/index.html
+++ b/index.html
@@ -4064,11 +4064,11 @@
                                 </p>
                                 <div class="adres">
                                     <i></i>
-                                    <a href="#midea"><span>Адрес завода:</span> Guang Dong Midea Electric
+                                    <p><span>Адрес завода:</span> Guang Dong Midea Electric
                                         Appliances Co. (Midea)
                                         6 Midea Avenue, Beijiao, Shunde, Foshan City, Guangdong Province, P.R. China
                                         528311 Мидеа Проспект,, Шунде, Городе Фошань, Провинции Гуандун, P. R. China
-                                        528311</a>
+                                        528311</p>
                                 </div>
                             </div>
                             <div class="section_product_wrap__manufactures__factory_block__brend_link">
@@ -4175,8 +4175,8 @@
                                 </p>
                                 <div class="adres">
                                     <i></i>
-                                    <a href="#gree"><span>Адрес завода:</span>Jinji West Road, Qianshan, Zhuhai 519070,
-                                        Guangdong, Китай</a>
+                                    <p><span>Адрес завода:</span>Jinji West Road, Qianshan, Zhuhai 519070,
+                                        Guangdong, Китай</p>
                                 </div>
                             </div>
                             <div class="section_product_wrap__manufactures__factory_block__brend_link section_product_wrap__manufactures__factory_block__brend_link">
@@ -4250,11 +4250,11 @@
                                 </p>
                                 <div class="adres">
                                     <i></i>
-                                    <a href="#hisens"><span>Адрес завода:</span>КИТАЙ, 17 DONGHAI XI
+                                    <p><span>Адрес завода:</span>КИТАЙ, 17 DONGHAI XI
                                         ROAD,QINGDAO,266071,CHINA ;КИТАЙ, No.8 Hisense Rd., Jiangmen City, Guangdong
                                         China;КИТАЙ, No. 218 Qianwangang Road, Huangdao, Qingdao, Shandong,
                                         P.R.China;КИТАЙ, No.1Hisense Road, Nancun, Pingdu, Qingdao, Shandong Province,
-                                        P.R.C</a>
+                                        P.R.C</p>
                                 </div>
                             </div>
                             <div class="section_product_wrap__manufactures__factory_block__brend_link section_product_wrap__manufactures__factory_block__brend_smal_line">
@@ -4295,8 +4295,8 @@
                                 </p>
                                 <div class="adres">
                                     <i></i>
-                                    <a href="#chigo"><span>Адрес завода:</span>КИТАЙ, SHENGLI INDUSTRIAL DISTRICT,
-                                        LISHUI TOWN, NANHAI, FOSHAN, GUANGDONG 528244</a>
+                                    <p><span>Адрес завода:</span>КИТАЙ, SHENGLI INDUSTRIAL DISTRICT,
+                                        LISHUI TOWN, NANHAI, FOSHAN, GUANGDONG 528244</p>
                                 </div>
                             </div>
                             <div class="section_product_wrap__manufactures__factory_block__brend_link section_product_wrap__manufactures__factory_block__brend_smal_line">
@@ -4336,8 +4336,8 @@
                                 </p>
                                 <div class="adres">
                                     <i></i>
-                                    <a href="aux"><span>Адрес завода:</span>China Zhejiang Ningbo Yinzhou No.566,East
-                                        Yinxian Greatroad,High-Tech Zone</a>
+                                    <p><span>Адрес завода:</span>China Zhejiang Ningbo Yinzhou No.566,East
+                                        Yinxian Greatroad,High-Tech Zone</p>
                                 </div>
                             </div>
                             <div class="section_product_wrap__manufactures__factory_block__brend_link section_product_wrap__manufactures__factory_block__brend_smal_line">
@@ -4404,10 +4404,10 @@
                                 </p>
                                 <div class="adres">
                                     <i></i>
-                                    <a href="#hisens"><span>Адрес завода:</span>Nantou Road west ,Nantou Town Zhongshan
+                                    <p><span>Адрес завода:</span>Nantou Road west ,Nantou Town Zhongshan
                                         City , Guangdong P. R.China; д. № 59 , Наньтоу дороге на запад ,Наньтоу город,
                                         город Чжуншань , Гуандун КНР
-                                        П. С.:528427 </a>
+                                        П. С.:528427 </p>
                                 </div>
                             </div>
                             <div class="section_product_wrap__manufactures__factory_block__brend_link section_product_wrap__manufactures__factory_block__brend_smal_line">
@@ -4444,8 +4444,8 @@
                                 </p>
                                 <div class="adres">
                                     <i></i>
-                                    <a href="chigo"><span>Адрес завода:</span>КИТАЙ, Room S401, Haier Brand building,
-                                        Haier Industry park Hi-tech Zone, Laoshan District Qingdao</a>
+                                    <p><span>Адрес завода:</span>КИТАЙ, Room S401, Haier Brand building,
+                                        Haier Industry park Hi-tech Zone, Laoshan District Qingdao</p>
                                 </div>
                             </div>
                             <div class="section_product_wrap__manufactures__factory_block__brend_link section_product_wrap__manufactures__factory_block__brend_smal_line">
@@ -4481,8 +4481,8 @@
                                 </p>
                                 <div class="adres">
                                     <i></i>
-                                    <a href="#aux"><span>Адрес завода:</span> Шунде, Фошань, провинция Гуандунн;
-                                        No.12, Qiaodong Road, Ronggui , Foshan , Guangdong</a>
+                                    <p><span>Адрес завода:</span> Шунде, Фошань, провинция Гуандунн;
+                                        No.12, Qiaodong Road, Ronggui , Foshan , Guangdong</p>
                                 </div>
                             </div>
                             <div class="section_product_wrap__manufactures__factory_block__brend_link section_product_wrap__manufactures__factory_block__brend_smal_line">
