Слайдер физ. лиц адаптирован по высоте

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="modal_fon">
         <div class="foto_block schem_big_block modal" id="foto">
             <a href="javascript:void(0)" class="close_foto"><i></i></a>
-            <img src="img/schema/v" alt="Витрина ВИМТЕХ" title="Витрина ВИМТЕХ">
+            <img src="img/schema/Vimtex.jpg" alt="Витрина ВИМТЕХ" title="Витрина ВИМТЕХ">
         </div>
         <!--блок с миниатюрами схем-->
         <div class="miniature_block modal">
@@ -1841,7 +1841,8 @@
             <a href="javascript:void(0)" class="close monufacture_close"><i></i></a>
             <div class="haier_text">
                 <p class="haier_text_info">
-                    <span>Адрес:</span> КИТАЙ, Room S401, Haier Brand building, Haier Industry park Hi-tech Zone, Laoshan District Qingdao
+                    <span>Адрес:</span> КИТАЙ, Room S401, Haier Brand building, Haier Industry park Hi-tech Zone,
+                    Laoshan District Qingdao
                 </p>
                 <p class="haier_text_info">
                     <span>Наличие собственного цеха по производству компрессоров:</span>Приходите в ВИМТЕХ,
@@ -1962,7 +1963,8 @@
             </div>
             <div class="tcl_info_line">
                 <p class="adres">
-                    <span>Адрес:</span>Nantou Road west ,Nantou Town Zhongshan City , Guangdong P. R.China;  д. № 59 , Наньтоу дороге на запад ,Наньтоу город, город Чжуншань , Гуандун КНР
+                    <span>Адрес:</span>Nantou Road west ,Nantou Town Zhongshan City , Guangdong P. R.China; д. № 59 ,
+                    Наньтоу дороге на запад ,Наньтоу город, город Чжуншань , Гуандун КНР
                     П. С.:528427
                 </p>
                 <p>
@@ -4234,8 +4236,9 @@
                             </div>
                             <div class="section_product_wrap__manufactures__factory_block_zag_text_block">
                                 <h3>Заводы по производству кондиционеров, 2 класса</h3>
-                                <p>(максимальное количество наград от китайского правительства; совокупно, продукция
-                                    этих 2 заводов составляет 87% внутреннего рынка КНР)</p>
+                                <p>(продукция заводов поставляется в основном на экспорт; часть заводов имеют
+                                    сертификацию Евровент и TUV; климатическая техника - не основное направление
+                                    получения прибыли этих корпораций)</p>
                             </div>
                         </div>
 
@@ -4386,8 +4389,9 @@
                             </div>
                             <div class="section_product_wrap__manufactures__factory_block_zag_text_block">
                                 <h3>Заводы по производству кондиционеров, 3 класса</h3>
-                                <p>(максимальное количество наград от китайского правительства; совокупно, продукция
-                                    этих 2 заводов составляет 87% внутреннего рынка КНР)</p>
+                                <p>(максимально недорогая техника, зачастую оборудование и технологии , линии по сборке
+                                    - приобретено на предприятиях, которые провели модернизацию; широко используется
+                                    ручной труд)</p>
                             </div>
                         </div>
 
@@ -5491,9 +5495,9 @@
                                 <p><span>Skype:</span> <a href="javascript:void(0)">bogdan5749</a></p></div>
                         </div>
                         <div class="footer_info__section_tel_mail_block"><p>Отдел продаж товаров и услуг:</p> <a
-                                href="javascript:void(0)">
+                                href="mailto:zakaz@2211687.ru Менеджеру_ВИМТЕХ?subject=рассмотреть срочно(шифр ОВ-особой важности)">
                             <span id="_email9" itemprop="email">zakaz@2211687.ru</span></a>
-                            <p>Отдел претензий и контроля качества:</p> <a href="javascript:void(0)">
+                            <p>Отдел претензий и контроля качества:</p> <a href="mailto:arendabogdan@yandex.ru контроль_качества ?subject=рассмотреть срочно(шифр ОВ-особой важности)">
                                 <span id="_email10" itemprop="email">arendabogdan@yandex.ru</span></a></div>
                         <div class="footer_info__section_tel_form_block"><p> Введите номер телефона и мы Вам
                             перезвоним: </p>
